force-app/main/default/objects/Country_Mapping__mdt/Country_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Country Mapping</description>
    <label>Country Mapping</label>
    <pluralLabel>Country Mapping</pluralLabel>
</CustomObject>