force-app/main/default/objects/Country_Mapping__mdt/fields/Alt_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Alt_Country_Code__c</fullName>
    <description>Alt Country Code e.g. UK</description>
    <label>Alternative Country Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>