force-app/main/default/objects/Country_Mapping__mdt/fields/Country_Code_alpha_2__c.field-meta.xml
<CustomField>
    <fullName>Country_Code_alpha_2__c</fullName>
    <description>Country Code alpha-2 e.g. GB</description>
    <label>Country Code alpha-2</label>
    <length>2</length>
    <type>Text</type>
</CustomField>