force-app/main/default/objects/Country_Mapping__mdt/fields/Country_Code_alpha_3__c.field-meta.xml
<CustomField>
    <fullName>Country_Code_alpha_3__c</fullName>
    <description>Country Code alpha-3 - e.g. GBR</description>
    <label>Country Code alpha-3</label>
    <length>3</length>
    <type>Text</type>
</CustomField>