force-app/main/default/objects/Country_Mapping__mdt/fields/Country_Name__c.field-meta.xml
<CustomField>
    <fullName>Country_Name__c</fullName>
    <description>Full Country Name</description>
    <label>Country Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>